main_app/static/styles/profile.scss
// Fonts
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

//************* Kathy's CSS *************

// PROFILE PAGE main container
.profile-show-main {
  font-family: 'Poppins', sans-serif;
  font-size: 24px;
  padding-left: 0;
  padding-right: 0;
  height: 1200px;
}
// Holds all user information on left
.left-user-info {
  border-width: 50px; 
  border-color: darken(rgba(255, 119, 70, 0.726), 15%);
  border-style: dotted none dotted groove;
  background-color: var(--lightorange);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 1200px;

  .user-info-text {
    text-align: center;
  }
  img {
    clip-path: polygon(50% 14%, 9% 85%, 91% 85%);
  }
}
// Holds all current user's posts on right-side
.right-user-posts {
  border-width: 20px; 
  border-color: var(--blue);
  border-style: dotted dashed groove dotted;
  padding: 60px;
  background-color: darken(rgba(255, 119, 70, 0.726), 20%);
  overflow: auto;
  height: 1200px;
  
  img {
    margin: 20px 10px 5px 15px;
    width:280px;
    height: 280px;
    clip-path: polygon(10% 0%, 90% 0%, 100% 10%, 100% 90%, 90% 100%, 10% 100%, 0% 90%, 0% 10%);
  }
}
// border for each post-card
.post-border {
  border: 10px groove rgb(56, 56, 56);
  border-radius: 5px;
}
// Holds each post information
#post-cards {
  border: 15px groove rgb(219, 219, 219);
  border-radius: 0;
}

